# parquet-tools

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py  vscode.code-workspace
.github/workflows/: cli_test.yml  unittest.yml
parquet_tools/: README.md  __init__.py  cli.py
parquet_tools/commands/: csv.py  inspect.py  show.py  utils.py
parquet_tools/gen_py/parquet/: ttypes.py
parquet_tools/parquet/: reader.py
tests/: conftest.py  test0.parquet  test0_inspect.txt  test1.parquet  test_csv.py  test_inspect.py  test_parquet.py  test_parquets.py  test_show.py  test_util.py
tests/fixtures/: aws.py  test_data.py
