[tool.poetry]
name = "parquet_tools"
version = "0.2.15"
description = "Easy install parquet-tools"
authors = ["Kentaro Ueda <kentaro.ueda.kentaro@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ktrueda/parquet-tools"
homepage = "https://github.com/ktrueda/parquet-tools"
keywords = ["parquet-tools", "parquet"]
exclude = ["parquet_tools/parquet.thrift", "parquet_tools/README.md"]

[tool.poetry.dependencies]
python = ">=3.8"
halo = "^0.0.31"
pyarrow = "*"
pandas = "^2.1.4"
tabulate = "^0.9.0"
boto3 = "^1.34.11"
thrift = "^0.16.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pyarrow = "14.0.2"  # various test outputs are sensitive to this
pylint = "^3.0.3"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
moto = "^4.2.12"
wheel = "^0.42.0"
twine = "^4.0.2"

[tool.poetry.scripts]
parquet-tools = "parquet_tools.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
